--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header class="jumbotron pt-3 pb-3">
             <div class="container">
                 <div class="row justify-content-center">
-                    <img src="images/svg/logo-big.svg" class="svg-logo img-fluid mb-3" alt="Responsive image">
+                    <img src="images/svg/ghibli-logo.svg" class="svg-logo img-fluid mb-3" alt="Responsive image">
                 </div>
                 <div class="row justify-content-center">
                     <input class="form-control col-md-6 col-sm-12 text-info" type="search" placeholder="Search for persons, movies etc.">
