Cleanup in the code. Film section disapears correctly when deselected

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <!--Data Section--> 
         <main class="data-section" id="data-section">
            <div class="container" id="data-container">
-
-                <div class="row data-row" id="data-row">
+               
+                <div class="row film-data-row" id="film-data-row">
                 </div>
 
                 <table class="table table-hover mb-5 hidden" id="people-table">
