--- a/index.html
+++ b/index.html
@@ -22,29 +22,27 @@
                     <input class="form-control col-md-6 col-sm-12 text-info" type="search" placeholder="Search for persons, movies etc.">
                     <button class="search-btn btn btn-info col-md-2" type="button" id="search-btn">Search</button>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="mt-3" data-toggle="buttons">
-                        <label class="btn btn-outline-info" id="film-btn">
-                          <input type="checkbox" autocomplete="off" id="film-check">
-                          Films
-                        </label>
-                        <label class="btn btn-outline-info" id="people-btn">
-                          <input type="checkbox" autocomplete="off" id="people-check">
-                          People
-                        </label>
-                        <label class="btn btn-outline-info">
-                          <input type="checkbox" autocomplete="off" id="location-check">
-                          Locations
-                        </label>
-                        <label class="btn btn-outline-info">
-                          <input type="checkbox" autocomplete="off" id="species-check">
-                          Species
-                        </label>
-                        <label class="btn btn-outline-info">
-                          <input type="checkbox" autocomplete="off" id="vehicle-check">
-                          Vehicles
-                        </label>
-                    </div>
+                <div class="row justify-content-center mt-3" data-toggle="buttons">
+                    <label class="btn btn-outline-info mr-1" id="film-btn">
+                      <input type="checkbox" autocomplete="off" id="film-check">
+                      Films
+                    </label>
+                    <label class="btn btn-outline-info mr-1" id="people-btn">
+                      <input type="checkbox" autocomplete="off" id="people-check">
+                      People
+                    </label>
+                    <label class="btn btn-outline-info mr-1">
+                      <input type="checkbox" autocomplete="off" id="location-check">
+                      Locations
+                    </label>
+                    <label class="btn btn-outline-info mr-1">
+                      <input type="checkbox" autocomplete="off" id="species-check">
+                      Species
+                    </label>
+                    <label class="btn btn-outline-info">
+                      <input type="checkbox" autocomplete="off" id="vehicle-check">
+                      Vehicles
+                    </label>
                 </div>
             </div>
         </header>
@@ -53,7 +51,7 @@
         <main class="data-section" id="data-section">
            <div class="container" id="data-container">
                
-                <div class="row film-data-row" id="film-data-row">
+                <div class="row film-data-row justify-content-center" id="film-data-row">
                 </div>
 
                 <table class="table table-hover mb-5 hidden" id="people-table">
